# phynet

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
src/phynet/: _version.py
src/phynet/inputs/: average.py
src/phynet/layers/: __init__.py  _layers.py
